# python-uv-monorepo-template

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: format.sh  lint.sh  test.sh
src/api/: README.md  pyproject.toml
src/api/app/: main.py
src/api/app/routers/: __init__.py  health.py
src/api/app/tests/: conftest.py  test_health.py
src/core/: README.md  pyproject.toml
src/core/core/: hello.py
