[project]
name = "python-uv-monorepo-template"
version = "0.1.0"
description = "A monorepo template for Python project using uv"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name="leehuwuj", email="leehuwuj@gmail.com" }
]
dependencies = []


[tool.uv]
package = false
dev-dependencies = [
    "coverage>=7.6.7",
    "pytest-asyncio>=0.24.0",
    "pytest>=8.3.3",
    "ruff>=0.7.3",
    "ty>=0.0.1a14",
]

[tool.uv.sources]
core = { workspace = true }
api = { workspace = true }


[tool.uv.workspace]
members = ["src/core", "src/api"]
